--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <!-- <h1>Stock Market Dashboard</h1> -->
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQgpf60mLVlYn4yeV855F1J34H-uiHSJOUWw&usqp=CAU" alt="Smily img" width="130" height="90">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQgpf60mLVlYn4yeV855F1J34H-uiHSJOUWw&usqp=CAU" alt="Smily img" width="120" height="80">
       <h1>Stock Market Dashboard</h1>
 
     </header>
@@ -24,12 +24,12 @@
         <input type="text" placeholder="Search for Symbol"> <img src="https://play-lh.googleusercontent.com/mLvvgUXJVZeu-GbqWZfr8ug74V7d8Od9yU2AOvUUptiki9wIH-BJHataFTJI_J0TlQ" width="45" height="35" alt="Search img">
         <br>
         <br>
-        <label for="timeframe-select">TimeFrame:</label>
+        <label  id="tf" for="timeframe-select">TimeFrame:</label>
         <select id="timeframe-select">
-          <option value="INTRADAY">Intraday</option>
-          <option value="WEEKLY">Weekly</option>
-          <option value="DAILY">Daily</option>
-          <option value="MONTHLY">Monthly</option>
+          <option id="intra" value="INTRADAY">Intraday</option>
+          <option id="week" value="WEEKLY">Weekly</option>
+          <option id="dai" value="DAILY">Daily</option>
+          <option id="mont" value="MONTHLY">Monthly</option>
         </select>
         
         <button id="btn" type="submit">Add Stock</button>
